--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,26 +40,24 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    //bmob-sdk
+    // -------------------- 以下4个库是必须依赖的 ----------------------------
+    // -------------------- 以上4个库是必须依赖的 ----------------------------
+    // 目前支持常见的 4 种图片加载库，必须在下面四个图片加载库中选择一个添加依赖
+    //    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile project(':library')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.3.1'
-    //bmob-sdk
-    compile 'cn.bmob.android:bmob-sdk:3.5.5'
-    testCompile 'junit:junit:4.12'
 
+    compile 'cn.bmob.android:bmob-sdk:3.5.5'
     compile 'com.zhy:base-adapter:3.0.3'
     compile 'com.android.support:cardview-v7:25.3.1'
-
     compile 'pub.devrel:easypermissions:0.2.1'
-    // -------------------- 以下4个库是必须依赖的 ----------------------------
     compile 'cn.bingoogolapple:bga-photopicker:1.2.3@aar'
-
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'cn.bingoogolapple:bga-adapter:1.1.8@aar'
-    // -------------------- 以上4个库是必须依赖的 ----------------------------
-
-    // 目前支持常见的 4 种图片加载库，必须在下面四个图片加载库中选择一个添加依赖
-//    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    testCompile 'junit:junit:4.12'
 }
