优化消息列表

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.jakewharton.butterknife'
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -10,7 +11,9 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -30,6 +33,8 @@ android {
         exclude 'META-INF/maven/com.google.code.gson/gson/pom.properties'
 
     }
+
+
     lintOptions {
         abortOnError false
     }
@@ -46,11 +51,13 @@ dependencies {
     // 目前支持常见的 4 种图片加载库，必须在下面四个图片加载库中选择一个添加依赖
     //    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile project(':library')
+
+    // ButterKnife
+    // Glide
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.3.1'
-
     compile 'cn.bmob.android:bmob-sdk:3.5.5'
     compile 'com.zhy:base-adapter:3.0.3'
     compile 'com.android.support:cardview-v7:25.3.1'
@@ -59,11 +66,12 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'cn.bingoogolapple:bga-adapter:1.1.8@aar'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    testCompile 'junit:junit:4.12'
-
-    // ButterKnife
     compile 'com.jakewharton:butterknife:8.5.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-    // Glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    testCompile 'junit:junit:4.12'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    compile 'com.lzy.widget:imagepicker:0.5.5'  //指定版本
+    //compile 'com.github.moduth:blockcanary-android:1.2.1'
+
+
 }
