--- a/mFCFrame/build.gradle
+++ b/mFCFrame/build.gradle
@@ -31,6 +31,6 @@ dependencies {
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.google.code.gson:gson:2.2.2'
-
-
+    compile 'com.jakewharton:butterknife:5.1.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
