--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,7 +71,7 @@ dependencies {
     compile 'com.tencent.bugly:crashreport_upgrade:1.2.0'
     compile 'com.tencent.bugly:nativecrashreport:2.2.0'
 
-    //图片加载
+    //图片加载库
     compile 'com.facebook.fresco:fresco:0.12.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
