--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.yl.lenovo.kchat"
-        minSdkVersion 16
+        minSdkVersion 14
         targetSdkVersion 25
         versionCode 3
         versionName "1.2"
@@ -49,22 +49,18 @@ dependencies {
     })
     compile 'com.android.support:support-vector-drawable:25.3.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     //bmobsdk
     compile 'cn.bmob.android:bmob-sdk:3.5.5'
     //万能适配器
     compile 'com.zhy:base-adapter:3.0.3'
-    compile 'cn.bingoogolapple:bga-adapter:1.1.8@aar'//
+    compile 'cn.bingoogolapple:bga-adapter:1.1.8@aar'
+    //
     //临时权限申请
     compile 'pub.devrel:easypermissions:0.2.1'
-    //图片选择及裁剪
-    compile 'cn.bingoogolapple:bga-photopicker:1.2.3@aar'
-    compile 'com.lzy.widget:imagepicker:0.6.1'
     //崩溃收集，以及app升级
     compile 'com.tencent.bugly:crashreport_upgrade:1.2.0'
     compile 'com.tencent.bugly:nativecrashreport:2.2.0'
@@ -73,8 +69,8 @@ dependencies {
     //图片加载库
     compile 'com.facebook.fresco:fresco:0.12.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
     // ButterKnife
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    compile project(':imagepicker')
 }
