--- a/imagepicker/build.gradle
+++ b/imagepicker/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.lzy.widget:view-core:0.2.1'
     compile 'com.jakewharton:butterknife:5.1.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'pub.devrel:easypermissions:1.0.1'
     //compile project(':mFCFrame')
 }
 
