引导页优化

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     compile project(':imagepicker')
+    //引导页
+    compile 'cn.bingoogolapple:bga-banner:2.1.8@aar'
 }
