--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,13 +48,13 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:support-vector-drawable:25.3.1'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     //bmobsdk
     compile 'cn.bmob.android:bmob-sdk:3.5.5'
+
     //万能适配器
     compile 'com.zhy:base-adapter:3.0.3'
     compile 'cn.bingoogolapple:bga-adapter:1.1.8@aar'
@@ -69,10 +69,13 @@ dependencies {
     //图片加载库
     compile 'com.facebook.fresco:fresco:0.12.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    // ButterKnife
-    compile 'com.jakewharton:butterknife:8.5.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     compile project(':imagepicker')
     //引导页
     compile 'cn.bingoogolapple:bga-banner:2.1.8@aar'
+    testCompile 'junit:junit:4.12'
+
+    // ButterKnife
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    compile 'com.github.Othershe:NiceDialog:1.1.4'
 }
